Motion tracking on Blender 2.76 rc3 on mac osx #46403

Closed
opened 2015-10-07 09:35:10 +02:00 by Sillon · 13 comments

System Information
Mac OsX 10.10.5

Blender Version
fb78f6d
2.76 rc3

Short description of error
Motion tracking don't work.
"Detect Features" works but when I click play in "Track" nothing happens.
It works perfectly on 2.75 (c27589e)

Best regards

**System Information** Mac OsX 10.10.5 **Blender Version** fb78f6d 2.76 rc3 **Short description of error** Motion tracking don't work. "Detect Features" works but when I click play in "Track" nothing happens. It works perfectly on 2.75 (c27589e) Best regards
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @robsil47

Added subscriber: @robsil47
Sergey Sharybin was assigned by Campbell Barton 2015-10-07 11:00:05 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscriber: @mont29

Added subscriber: @mont29

As usual, please attach here needed files to help reproducing the issue (here would be .blend + video file I guess)…

As usual, please attach here needed files to help reproducing the issue (here would be .blend + video file I guess)…
Author

Hello, I hope it'll help.
MTrack_test.blend

video_test.mp4

Hello, I hope it'll help. [MTrack_test.blend](https://archive.blender.org/developer/F243383/MTrack_test.blend) [video_test.mp4](https://archive.blender.org/developer/F243384/video_test.mp4)

thanks for the files. Cannot confirm that here on linux with latest master, tracks works as expected afaikt…

thanks for the files. Cannot confirm that here on linux with latest master, tracks works as expected afaikt…

Added subscriber: @brecht

Added subscriber: @brecht

I can confirm the issue on OS X with 2.76 RC3 and my own build using Xcode 7 and the 10.11 SDK. The build with the older SDK / compiler at #46341#339613 works though, so I think for the 2.76 release this should work, but there's definitely something broken here.

In my own builds it works fine in debug mode, but not release mode. It sometimes crashes even, but there's no consistent backtrace, looks like some random memory corruption.

I can confirm the issue on OS X with 2.76 RC3 and my own build using Xcode 7 and the 10.11 SDK. The build with the older SDK / compiler at #46341#339613 works though, so I think for the 2.76 release this should work, but there's definitely something broken here. In my own builds it works fine in debug mode, but not release mode. It sometimes crashes even, but there's no consistent backtrace, looks like some random memory corruption.

This issue was referenced by 64e4f9967f

This issue was referenced by 64e4f9967fbc5ee40c6aa8a46d7527faf2ca356e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed now, thanks for the report.

It seems the new clang version compiles this code in such a way that FloatImage temp_image is on exactly the same stack location on the second call to GetImageForMarker(), without getting overwritten by something else, so the uninitialized shape_ in the second call has the exact same value as the one from the first call.

Fixed now, thanks for the report. It seems the new clang version compiles this code in such a way that `FloatImage temp_image` is on exactly the same stack location on the second call to `GetImageForMarker()`, without getting overwritten by something else, so the uninitialized `shape_` in the second call has the exact same value as the one from the first call.
Author

Hello, I tried today 2.76 and the bug is fixed.
Congratulations.
Thank you

Hello, I tried today 2.76 and the bug is fixed. Congratulations. Thank you
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46403
No description provided.