Fix T46403: motion tracking not workig with Xcode 7 on OS X.

Caused by use of the uninitialized shape_ variable in Resize().